test/scc/expr/semantic-errors/113.a
113.t:8:9: error: passing argument 1 from incompatible pointer type